Fix the visibility of the border on the button block

--- a/src/wp-content/themes/twentynineteen/sass/blocks/_blocks.scss
+++ b/src/wp-content/themes/twentynineteen/sass/blocks/_blocks.scss
@@ -217,6 +217,31 @@
 				color: white;
 			}
 
+			&:where([style*=border-width]),
+			&:where(.has-border-color) {
+				border-style: solid;
+			}
+
+			&:where([style*="border-top-width"]),
+			&:where([style*="border-top-color"]) {
+				border-top-style: solid;
+			}
+
+			&:where([style*="border-right-width"]),
+			&:where([style*="border-right-color"]) {
+				border-left-style: solid;
+			}
+
+			&:where([style*="border-bottom-width"]),
+			&:where([style*="border-bottom-color"]) {
+				border-bottom-style: solid;
+			}
+
+			&:where([style*="border-left-width"]),
+			&:where([style*="border-left-color"]) {
+				border-right-style: solid;
+			}
+
 			&:hover {
 				color: white;
 				background: $color__background-button-hover;
